# LlamaUI

./: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: build-macos.yml  build-windows.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: benchmark.rs  config.rs  instance.rs  mod.rs  models.rs  process.rs  proxy.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/mcp/: server.rs
src-tauri/src/proxy/: handler.rs  mod.rs  server.rs
src-tauri/src/proxy/convert/: request.rs  response.rs
src-tauri/src/services/: config_store.rs  instance_registry.rs  llama_detector.rs  mod.rs  model_scanner.rs  process_manager.rs
src/lib/components/: BenchmarkPanel.svelte  ConfigEditor.svelte  InstanceEditForm.svelte  InstanceList.svelte  Launcher.svelte  LogTerminal.svelte  ModelBrowser.svelte  ModelLibrary.svelte  ModelPicker.svelte  ParamsGrid.svelte  ProxyConfigPanel.svelte  Sidebar.svelte  StatusBar.svelte
src/lib/services/: tauri-bridge.ts
src/lib/stores/: config.svelte.ts  models.svelte.ts  process.svelte.ts  proxy.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: logger.ts
