[package]
name = "llamaui"
version = "0.2.0"
edition = "2021"

[lib]
name = "llamaui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "macros", "time", "parking_lot"] }
dirs = "6"
libc = "0.2"
axum = { version = "0.8", features = [] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
arc-swap = "1"

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
